# algorithms-and-data-structures

lab1/: .gitignore
lab1/11/: 1.txt  hello.txt  main.pas  main.txt  result.txt
lab2/18/: CMakeLists.txt  main.cpp
lab2/18/DataStructures/: Queue.h
lab3/22/: CMakeLists.txt  main.cpp
lab3/22/DataStructures/: CMakeLists.txt  Queue.h
lab3/22/FileSystem/: CMakeLists.txt  FileSystemEntities.h  FileSystemParser.h  FileSystemTree.cpp  FileSystemTree.h
lab4/18/: CMakeLists.txt  DijkstraAlgorithm.sln  DijkstraAlgorithm.vcxproj  DijkstraAlgorithm.vcxproj.filters  input.txt  main.c  main.cpp  output.txt
lab4/18/AlgorithmImplementation/: CMakeLists.txt  DijkstraAlgorithm.cpp  DijkstraAlgorithm.h
lab4/18/AlgorithmImplementation/Entities/: AlgorithmHistory.h  AlgorithmState.h  NodeLabel.h
lab4/18/DataStructures/: CMakeLists.txt  graph.c  graph.h
lab4/18/DataStructures/Graph/: Graph.cpp  Graph.h
lab4/18/DataStructures/GraphParser/: GraphParser.cpp  GraphParser.h
lab4/18/DataStructures/Queue/: Queue.h
lab4/18/DataStructures/Stack/: Stack.h
